2012-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArchiver.m:
	* Source/NSUnarchiver.m:
	Revise archive format to allow for variable sized array counts ...
	original versionallowed for variable encodings of integral types in
	archived data, but not for the count of the nuymber of items in the
	array :-(
	* Source/NSPortCoder.m: Similar fixes for encoding/decoding arrays.

2012-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-copyWithZone:): Copy name spaces as well.
	* Source/NSXMLDocument.m (-copyWithZone:): Rewrite copy method.
	* Source/NSXMLElement.m: Remove copy method.

2012-02-27 Doug Simons <doug.simons@testplant.com>
	Merged to trunk by: greg.casamento@gmail.com

	* Source/NSXMLDocument.m: Fix bugs in setCharacterEncoding: and
	copyWithZone: that cause a memory crash when tree is freed.
	Doug Simons <doug.simons@testplant.com>

2012-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (+_objectForNode:): Get the actual class from
	the document.
	* Source/NSXMLNode.m (-description): Add a simple description method.
	* Source/NSXMLDocument.m: Further cleanup. Exchange the contents of
	-initWithData:... and initWithXMLString:...

2012-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArchiver.m:
	* Source/NSUnarchiver.m:
	Alter to support encoding and decoding arrays with NSUInteger counts
	(ie more than 2^32 objects if on a 64bit system).

2012-02-26  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSData.m: Various 64-bit compatibility fixes, mostly changing
	unsgined to NSUInteger.

2012-02-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (execute_xpath): Use correct node for
	relative paths.
	* Source/NSXMLNode.m (isEqualTree): Correct equality test to
	ignore siblings.
	* Source/NSXMLNode.m (+elementWithName:stringValue:): Correct
	recursive call.
	Patch by Ivan Vučica <ivucica@gmail.com>
	* Source/NSXMLElement.m: Add FIXME comments for name space methods.
