@@ -7,9 +7,9 @@ GCC_VERSION=4.0.0
 # The version number of this release.
 MAJOR_VERSION=1
 MINOR_VERSION=24
-SUBMINOR_VERSION=1
+SUBMINOR_VERSION=2
 # numeric value should match above
-VERSION_NUMBER=124.1
+VERSION_NUMBER=124.2
 GNUSTEP_BASE_VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}
 VERSION=${GNUSTEP_BASE_VERSION}
 
